--- a/ui/src/components/global.less
+++ b/ui/src/components/global.less
@@ -359,6 +359,7 @@ body {
 
   .ant-layout-sider-children {
     overflow-y: hidden;
+    max-height: 100vh;
 
     &:hover {
       overflow-y: auto;
