--- a/cmdb-ui/public/iconfont/iconfont.css
+++ b/cmdb-ui/public/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3857903 */
-  src: url('iconfont.woff2?t=1716896994700') format('woff2'),
-       url('iconfont.woff?t=1716896994700') format('woff'),
-       url('iconfont.ttf?t=1716896994700') format('truetype');
+  src: url('iconfont.woff2?t=1717726223524') format('woff2'),
+       url('iconfont.woff?t=1717726223524') format('woff'),
+       url('iconfont.ttf?t=1717726223524') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,162 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.ops-is_dynamic-disabled:before {
+  content: "\e952";
+}
+
+.itsm-pdf:before {
+  content: "\e951";
+}
+
+.monitor-sqlserver:before {
+  content: "\e950";
+}
+
+.monitor-dig2:before {
+  content: "\e94d";
+}
+
+.monitor-base2:before {
+  content: "\e94e";
+}
+
+.monitor-foreground1:before {
+  content: "\e94f";
+}
+
+.monitor-log2:before {
+  content: "\e945";
+}
+
+.monitor-backgroud1:before {
+  content: "\e946";
+}
+
+.monitor-port1:before {
+  content: "\e947";
+}
+
+.monitor-ipmi2:before {
+  content: "\e948";
+}
+
+.monitor-process2:before {
+  content: "\e949";
+}
+
+.monitor-snmp2:before {
+  content: "\e94a";
+}
+
+.monitor-performance1:before {
+  content: "\e94b";
+}
+
+.monitor-testing1:before {
+  content: "\e94c";
+}
+
+.monitor-ping2:before {
+  content: "\e941";
+}
+
+.monitor-prometheus:before {
+  content: "\e942";
+}
+
+.monitor-websocket2:before {
+  content: "\e943";
+}
+
+.monitor-traceroute2:before {
+  content: "\e944";
+}
+
+.monitor-port:before {
+  content: "\e93c";
+}
+
+.monitor-base1:before {
+  content: "\e93d";
+}
+
+.monitor-backgroud:before {
+  content: "\e93e";
+}
+
+.monitor-dig1:before {
+  content: "\e93f";
+}
+
+.monitor-foreground:before {
+  content: "\e940";
+}
+
+.monitor-log1:before {
+  content: "\e934";
+}
+
+.monitor-process1:before {
+  content: "\e935";
+}
+
+.monitor-testing:before {
+  content: "\e936";
+}
+
+.monitor-snmp1:before {
+  content: "\e937";
+}
+
+.monitor-performance:before {
+  content: "\e938";
+}
+
+.monitor-traceroute1:before {
+  content: "\e939";
+}
+
+.monitor-ping1:before {
+  content: "\e93a";
+}
+
+.monitor-ipmi1:before {
+  content: "\e93b";
+}
+
+.a-monitor-prometheus1:before {
+  content: "\e932";
+}
+
+.monitor-websocket1:before {
+  content: "\e933";
+}
+
+.monitor-group_expansion1:before {
+  content: "\e930";
+}
+
+.monitor-group_collapse1:before {
+  content: "\e931";
+}
+
+.monitor-group_expansion:before {
+  content: "\e92e";
+}
+
+.monitor-group_collapse:before {
+  content: "\e92f";
+}
+
+.monitor-list_view:before {
+  content: "\e92d";
+}
+
+.monitor-group_view:before {
+  content: "\e92c";
 }
 
 .ops-topology_view:before {
