--- a/cmdb-ui/public/iconfont/iconfont.css
+++ b/cmdb-ui/public/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3857903 */
-  src: url('iconfont.woff2?t=1719307117118') format('woff2'),
-       url('iconfont.woff?t=1719307117118') format('woff'),
-       url('iconfont.ttf?t=1719307117118') format('truetype');
+  src: url('iconfont.woff2?t=1719487341033') format('woff2'),
+       url('iconfont.woff?t=1719487341033') format('woff'),
+       url('iconfont.ttf?t=1719487341033') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,42 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.veops-markdown:before {
+  content: "\e96a";
+}
+
+.veops-bar_horizontal:before {
+  content: "\e860";
+}
+
+.veops-gauge:before {
+  content: "\e965";
+}
+
+.veops-heatmap:before {
+  content: "\e966";
+}
+
+.veops-treemap:before {
+  content: "\e967";
+}
+
+.veops-radar:before {
+  content: "\e968";
+}
+
+.veops-data:before {
+  content: "\e969";
+}
+
+.veops-import:before {
+  content: "\e963";
+}
+
+.veops-batch_operation:before {
+  content: "\e964";
 }
 
 .cmdb-enterprise_edition:before {
@@ -241,7 +277,7 @@
   content: "\e92a";
 }
 
-.a-Group427319324:before {
+.monitor-add2:before {
   content: "\e929";
 }
 
@@ -343,10 +379,6 @@
 
 .veops-export:before {
   content: "\e862";
-}
-
-.a-veops-import1:before {
-  content: "\e860";
 }
 
 .monitor-ip:before {
