feat(ui): update auto discovery

--- a/cmdb-ui/src/modules/cmdb/views/ci/modules/ciDetailRelationTopo/index.less
+++ b/cmdb-ui/src/modules/cmdb/views/ci/modules/ciDetailRelationTopo/index.less
@@ -17,7 +17,7 @@
       border: 1px solid #d9d9d9;
       border-radius: 2px;
       padding: 4px 8px;
-      width: 100px;
+      width: auto;
       text-align: center;
       .title {
         font-size: 16px;
@@ -73,7 +73,7 @@
       }
     }
     .root {
-      width: 100px;
+      width: auto;
       border-color: @primary-color;
       font-weight: 700;
       padding: 4px 8px;
