feat:add employee work_region

--- a/cmdb-ui/src/style/global.less
+++ b/cmdb-ui/src/style/global.less
@@ -860,20 +860,30 @@ body {
   .vue-treeselect__control {
     border-radius: 2px !important;
     height: 32px;
+    border-color: #e4e7ed;
+    .vue-treeselect__value-container{
+      height: 30px;
+    }
+    .vue-treeselect__input-container{
+      display: flex;
+      align-items: center;
+      height: 30px;
+    }
   }
   .vue-treeselect__placeholder,
   .vue-treeselect__single-value {
-    line-height: 32px !important;
+    line-height: 28px !important;
   }
   .vue-treeselect__input {
-    height: 32px !important;
-    line-height: 32px !important;
+    height: 28px !important;
+    line-height: 28px !important;
   }
 }
 // vue-treeselect 多选样式
 .ops-setting-treeselect.vue-treeselect--multi {
   .vue-treeselect__control {
     border-radius: 2px !important;
+    border-color: #e4e7ed;
   }
 }
 
